--- a/css/styles.css
+++ b/css/styles.css
@@ -3,15 +3,16 @@
     padding: 0;
 }
 body{ 
+    background-color: #fff;
+    color: #757575;
     font-family: 'Roboto', sans-serif;
-    font-family: 'Raleway', sans-serif;
 }
 .links {
     list-style: none;
 }
 .header {
 }
-.logo-first {
+.logo-blue {
 font-family: 'Raleway', sans-serif;
 font-style: normal;
 font-weight: 700;
@@ -21,7 +22,7 @@ letter-spacing: 0.03em;
 color: #2196F3;
 text-decoration:none;
 }
-.logo-second {
+.logo-black {
 font-family: 'Raleway', sans-serif;
 font-style: normal;
 font-weight: 700;
@@ -81,7 +82,7 @@ text-decoration:none;
     text-transform: uppercase;
     color: #FFFFFF;
 }
-.header-btn { 
+.hero-btn { 
 font-weight: 700;
 font-size: 16px;
 line-height: 1.875;
@@ -93,4 +94,92 @@ color: #FFFFFF;
 background: #2196F3;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
+}
+/* Особливості */ 
+
+.section-title {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 1.1428;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #212121;
+}
+
+/* Чим ми займаємося */
+
+.first-sub-title {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 1.1666;
+text-align: center;
+letter-spacing: 0.03em;
+color: #212121;
+}
+
+/* Наша команда */
+
+.second-sub {
+    background: #F5F4FA;
+}
+
+.second-sub-title {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 36px;
+line-height: 1.1666;
+text-align: center;
+letter-spacing: 0.03em;
+color: #212121;
+}
+
+.second-sub-name {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.1875;
+letter-spacing: 0.03em;
+
+color: #212121;
+}
+
+/* footer */
+footer {
+    background: #2F303A;
+}
+.logo-white{
+    font-family: 'Raleway', sans-serif;
+font-style: normal;
+font-weight: 700;
+font-size: 26px;
+line-height: 1.1923;
+letter-spacing: 0.03em;
+color: #FFFFFF;
+text-decoration:none;
+}
+.footer-address {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 1.7142;
+letter-spacing: 0.03em;
+color: #FFFFFF;
+text-decoration:none
+}
+.footer-contact {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height:  1.7142;
+letter-spacing: 0.03em;
+color: rgba(255, 255, 255, 0.6);
+text-decoration:none
 }
