--- a/css/styles.css
+++ b/css/styles.css
@@ -183,3 +183,49 @@ letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6);
 text-decoration:none
 }
+/* portfolio page */
+
+.portfolio-nav-btn {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.625;
+text-align: center;
+letter-spacing: 0.03em;
+color: #212121;
+background: #F5F4FA;
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+border-radius: 4px;
+}
+.portfolio-nav-btn:hover,
+.portfolio-nav-btn:focus {
+    color: #FFFFFF;
+    background: #2196F3;
+}
+
+.portfolio-nav-btn:active {
+    color: #212121;
+    background: #F5F4FA;
+    }
+    
+    /* projects */
+.project-title {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 2;
+letter-spacing: 0.06em;
+color: #212121;
+}
+
+.project-subtitle { 
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 1.875;
+letter-spacing: 0.03em;
+color: #757575;
+}
