--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,6 @@ body{
 }
 .logo-blue {
 font-family: 'Raleway', sans-serif;
-font-style: normal;
 font-weight: 700;
 font-size: 26px;
 line-height: 1.1923;
@@ -24,7 +23,6 @@ text-decoration:none;
 }
 .logo-black {
 font-family: 'Raleway', sans-serif;
-font-style: normal;
 font-weight: 700;
 font-size: 26px;
 line-height: 1.1923;
@@ -74,7 +72,6 @@ text-decoration:none;
 }
 .hero-title {
     font-family: "Roboto", sans-serif;
-    font-style: normal;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.3636;
@@ -83,7 +80,7 @@ text-decoration:none;
     color: #FFFFFF;
 }
 .hero-btn { 
-font-weight: 700;
+font-family: 'Roboto';
 font-size: 16px;
 line-height: 1.875;
 display: flex;
@@ -99,8 +96,6 @@ border-radius: 4px;
 
 .section-title {
 font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
 font-size: 14px;
 line-height: 1.1428;
 letter-spacing: 0.03em;
@@ -108,12 +103,18 @@ text-transform: uppercase;
 color: #212121;
 }
 
+.section-subtitle {
+font-family: 'Roboto';
+font-size: 14px;
+line-height: 1.7142;
+letter-spacing: 0.03em;
+color: #757575;
+}
+
 /* Чим ми займаємося */
 
 .first-sub-title {
 font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
 font-size: 36px;
 line-height: 1.1666;
 text-align: center;
@@ -129,8 +130,6 @@ color: #212121;
 
 .second-sub-title {
 font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
 font-size: 36px;
 line-height: 1.1666;
 text-align: center;
@@ -140,7 +139,6 @@ color: #212121;
 
 .second-sub-name {
 font-family: 'Roboto';
-font-style: normal;
 font-weight: 500;
 font-size: 16px;
 line-height: 1.1875;
@@ -149,13 +147,20 @@ letter-spacing: 0.03em;
 color: #212121;
 }
 
+.second-sub-position {
+font-family: 'Roboto';
+font-size: 16px;
+line-height: 1.1875;
+letter-spacing: 0.03em;
+color: #757575;
+}
+
 /* footer */
 footer {
     background: #2F303A;
 }
 .logo-white{
     font-family: 'Raleway', sans-serif;
-font-style: normal;
 font-weight: 700;
 font-size: 26px;
 line-height: 1.1923;
@@ -165,8 +170,6 @@ text-decoration:none;
 }
 .footer-address {
 font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
 font-size: 14px;
 line-height: 1.7142;
 letter-spacing: 0.03em;
@@ -175,8 +178,6 @@ text-decoration:none
 }
 .footer-contact {
 font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
 font-size: 14px;
 line-height:  1.7142;
 letter-spacing: 0.03em;
@@ -187,7 +188,6 @@ text-decoration:none
 
 .portfolio-nav-btn {
 font-family: 'Roboto';
-font-style: normal;
 font-weight: 500;
 font-size: 16px;
 line-height: 1.625;
@@ -212,8 +212,6 @@ border-radius: 4px;
     /* projects */
 .project-title {
 font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
 font-size: 18px;
 line-height: 2;
 letter-spacing: 0.06em;
@@ -222,8 +220,6 @@ color: #212121;
 
 .project-subtitle { 
 font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
 font-size: 16px;
 line-height: 1.875;
 letter-spacing: 0.03em;
