--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,15 @@ letter-spacing: 0.03em;
 color: #000000;
 text-decoration:none;
 }
+/* logo footer "studio*/
+.logo-white {
+font-family: 'Raleway', sans-serif;
+font-weight: 700;
+font-size: 26px;
+line-height: 1.1923;
+letter-spacing: 0.03em;
+color: #FFFFFF;
+}
 .header-nav {
     list-style: none;
 }
@@ -52,7 +61,6 @@ text-decoration:none;
     color: #212121;
 }
 .header-contact {
-font-family: "Roboto", sans-serif;
 font-weight: 500;
 font-size: 14px;
 line-height: 1.1428;
@@ -71,7 +79,7 @@ text-decoration:none;
     background: #2F303A;
 }
 .hero-title {
-    font-family: "Roboto", sans-serif;
+  
     font-weight: 900;
     font-size: 44px;
     line-height: 1.3636;
@@ -81,6 +89,7 @@ text-decoration:none;
 }
 .hero-btn { 
 font-family: 'Roboto';
+font-weight: 700;
 font-size: 16px;
 line-height: 1.875;
 display: flex;
@@ -95,7 +104,6 @@ border-radius: 4px;
 /* Особливості */ 
 
 .section-title {
-font-family: 'Roboto';
 font-size: 14px;
 line-height: 1.1428;
 letter-spacing: 0.03em;
@@ -104,7 +112,6 @@ color: #212121;
 }
 
 .section-subtitle {
-font-family: 'Roboto';
 font-size: 14px;
 line-height: 1.7142;
 letter-spacing: 0.03em;
@@ -114,7 +121,6 @@ color: #757575;
 /* Чим ми займаємося */
 
 .first-sub-title {
-font-family: 'Roboto';
 font-size: 36px;
 line-height: 1.1666;
 text-align: center;
@@ -129,7 +135,6 @@ color: #212121;
 }
 
 .second-sub-title {
-font-family: 'Roboto';
 font-size: 36px;
 line-height: 1.1666;
 text-align: center;
@@ -138,7 +143,6 @@ color: #212121;
 }
 
 .second-sub-name {
-font-family: 'Roboto';
 font-weight: 500;
 font-size: 16px;
 line-height: 1.1875;
@@ -148,7 +152,6 @@ color: #212121;
 }
 
 .second-sub-position {
-font-family: 'Roboto';
 font-size: 16px;
 line-height: 1.1875;
 letter-spacing: 0.03em;
@@ -169,7 +172,6 @@ color: #FFFFFF;
 text-decoration:none;
 }
 .footer-address {
-font-family: 'Roboto';
 font-size: 14px;
 line-height: 1.7142;
 letter-spacing: 0.03em;
@@ -177,7 +179,6 @@ color: #FFFFFF;
 text-decoration:none
 }
 .footer-contact {
-font-family: 'Roboto';
 font-size: 14px;
 line-height:  1.7142;
 letter-spacing: 0.03em;
@@ -187,7 +188,6 @@ text-decoration:none
 /* portfolio page */
 
 .portfolio-nav-btn {
-font-family: 'Roboto';
 font-weight: 500;
 font-size: 16px;
 line-height: 1.625;
@@ -211,15 +211,13 @@ border-radius: 4px;
     
     /* projects */
 .project-title {
-font-family: 'Roboto';
 font-size: 18px;
 line-height: 2;
 letter-spacing: 0.06em;
 color: #212121;
 }
 
-.project-subtitle { 
-font-family: 'Roboto';
+.project-subtitle {
 font-size: 16px;
 line-height: 1.875;
 letter-spacing: 0.03em;
